# promptnotes

./: .gitignore  CLAUDE.md  README.md  apm.lock.yaml  apm.yml  flake.nix  idea.md  rust-toolchain.toml
.beads/: .gitignore  (+3 more)
.ori/domain/code/rust/: Cargo.toml  errors.rs  events.rs  lib.rs  note.rs  note_feed.rs  settings.rs  update_channel.rs  workflows.rs
apps/promptnotes/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/promptnotes/src-tauri/capabilities/: default.json
apps/promptnotes/src-tauri/icons/: icon.icns
apps/promptnotes/src-tauri/src/: lib.rs
apps/promptnotes/src-tauri/src/note_capture/shared/: events.rs  mod.rs  ports.rs  result.rs  storage.rs
apps/promptnotes/src-tauri/src/note_capture/shared/adapters/: clipboard.rs  mod.rs  trash_service.rs  undo_stack.rs
apps/promptnotes/src-tauri/src/note_capture/shared/types/: body_hash.rs  deleted_note.rs  mod.rs  note.rs  note_body.rs  note_id.rs  tag.rs  tag_set.rs  timestamp.rs
apps/promptnotes/src-tauri/src/note_capture/slices/: mod.rs
apps/promptnotes/src-tauri/src/note_capture/slices/assign_tag/: application.rs  commands.rs  domain.rs  mod.rs  tests.rs
apps/promptnotes/src-tauri/src/note_capture/slices/auto_save_note/: application.rs  commands.rs  domain.rs  mod.rs  tests.rs
apps/promptnotes/src-tauri/src/note_feed/slices/: mod.rs
apps/promptnotes/src-tauri/src/update_distribution/shared/: ports.rs
apps/promptnotes/src-tauri/src/update_distribution/slices/: mod.rs
apps/promptnotes/src-tauri/src/user_preferences/: mod.rs
apps/promptnotes/src-tauri/src/user_preferences/shared/: mod.rs  ports.rs
apps/promptnotes/src-tauri/src/user_preferences/slices/: mod.rs
(+398 files in other folders)
