[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2.5.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-updater = "2.10.1"
specta = "2.0.0-rc.22"
tauri-specta = { version = "2.0.0-rc.25", features = ["javascript", "typescript"] }
thiserror = "1.0"
time = { version = "=0.3.41", features = ["macros", "formatting", "parsing"] }

[dev-dependencies]
proptest = "=1.6.0"
tempfile = "3"
